# homelab

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  ansible.cfg  configure-mikrotik-routeros-bootstrap.yml  configure-samba.yml  configure-switches.yml  configure-users.yml  configure-vms.yml  create-template.yml  create-vms.yml  inventory.yml  pyproject.toml  upgrade-to-bookworm.yml  upgrade-to-trixie.yml
docs/: juniper-rant.md  new-machine.md  playbooks.md  setup.md
group_vars/: all.yml
host_vars/: heero.blueteam.lan.yml  yoko.blueteam.lan.yml  zero.blueteam.lan.yml
roles/ansible-venv/tasks/: main.yml
roles/github/defaults/: main.yml
roles/github/vars/: main.yml
roles/juniper-switches/filter_plugins/: vlan_config.py
roles/juniper-switches/tasks/: main.yml  mocks.yml  rename_vlan_unused.yml
roles/kubernetes-cluster/defaults/: main.yml
roles/kubernetes-cluster/meta/: requirements.yml
roles/kubernetes-cluster/tasks/: main.yml
roles/kubernetes-cluster/templates/: cloud-init.yml.j2
roles/kubernetes-cluster/vars/: main.yml
roles/mikrotik-routeros-bootstrap/tasks/: main.yml
roles/mikrotik-routeros/files/: zero.blueteam.lan.pem
roles/mikrotik-routeros/tasks/: main.yml
roles/mikrotik-swos/tasks/: main.yml
roles/proxmox-api/tasks/: main.yml
roles/proxmox-api/vars/: main.yml
roles/samba/files/: smb.conf
roles/samba/handlers/: main.yml
roles/samba/tasks/: main.yml  passwds.yml
roles/syncthing/tasks/: gui-settings.yml  main.yml
roles/vm-template-debian/: NOTICE
scripts/: vault-password-env
vault/: example-vault.yml
(+9 files in other folders)
