[project]
name = "ansible-homelab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=12.0.0",
    "ansible-pylibssh>=1.4.0",
    "jmespath>=1.1.0",
    "librouteros>=4.0.1",
    "mikrotik-swos>=1.3.2",
    "ncclient>=0.7.1",
    "xmltodict>=1.0.4",
]
